[gd_scene load_steps=19 format=3 uid="uid://coo2ey1o15ejr"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_n0q02"]
[ext_resource type="Texture2D" uid="uid://cexjt65jub06a" path="res://icon.svg" id="2_duk7v"]
[ext_resource type="FontFile" uid="uid://lg7fhp7gjej" path="res://Assets/Fonts/videotype.ttf" id="3_2x58b"]
[ext_resource type="FontFile" uid="uid://nbm826r7lfx7" path="res://Assets/Fonts/BirchLeaf.ttf" id="3_q57cy"]
[ext_resource type="FontFile" uid="uid://0tf8qy53t5ie" path="res://Assets/Fonts/PixelArmy.ttf" id="4_hg1ii"]
[ext_resource type="Script" path="res://Scripts/music.gd" id="4_ya1pm"]
[ext_resource type="Script" path="res://Scripts/sfx.gd" id="5_rip41"]

[sub_resource type="Animation" id="Animation_66o4w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uigbl"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yflxl"]
_data = {
"RESET": SubResource("Animation_66o4w"),
"fade_in": SubResource("Animation_uigbl")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kdvvt"]
texture = ExtResource("2_duk7v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0x5jp"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6dc8y"]
color = Color(0.0880691, 0.110076, 0.335149, 1)
thickness = 3

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jxtvm"]
color = Color(0.28785, 0.2622, 0.57, 1)
thickness = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nswc5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmhud"]
bg_color = Color(0.22433, 0.501555, 0.46937, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qpcv"]
bg_color = Color(0.0782, 0.23, 0.21735, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhj80"]
bg_color = Color(0.163884, 0.388107, 0.362258, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_n0q02")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yflxl")
}

[node name="Panel" type="Panel" parent="."]
modulate = Color(3.60981e-08, 0.248512, 0.24157, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kdvvt")

[node name="SettingsMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -93.0
offset_right = 131.5
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" type="TabContainer" parent="SettingsMenu"]
layout_mode = 2
offset_right = 263.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("3_2x58b")
current_tab = 0

[node name="sounds" type="TabBar" parent="SettingsMenu/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu/Tabs/sounds"]
layout_mode = 0
offset_left = -0.5
offset_right = 67.5
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/Tabs/sounds/MarginContainer"]
layout_mode = 2

[node name="Music_container" type="HBoxContainer" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Music_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2x58b")
theme_override_font_sizes/font_size = 15
text = "Music"

[node name="VSeparator" type="VSeparator" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Music_container"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_0x5jp")

[node name="Music" type="HSlider" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Music_container"]
custom_minimum_size = Vector2(140, 5)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_6dc8y")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jxtvm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jxtvm")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_ya1pm")
bus_name = "Music"

[node name="Sfx_container" type="HBoxContainer" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Sfx_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2x58b")
theme_override_font_sizes/font_size = 15
text = "Sfx"

[node name="VSeparator" type="VSeparator" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Sfx_container"]
layout_mode = 2
theme_override_constants/separation = 65
theme_override_styles/separator = SubResource("StyleBoxEmpty_0x5jp")

[node name="Sfx" type="HSlider" parent="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Sfx_container"]
custom_minimum_size = Vector2(140, 5)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_6dc8y")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jxtvm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jxtvm")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_rip41")
bus_name = "Sfx"

[node name="graph" type="TabBar" parent="SettingsMenu/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="controls" type="TabBar" parent="SettingsMenu/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Back" type="Button" parent="SettingsMenu"]
layout_mode = 2
offset_left = 190.0
offset_top = 183.0
offset_right = 264.0
offset_bottom = 206.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_2x58b")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_nswc5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmhud")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7qpcv")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhj80")
text = "Back
"

[node name="Buttons&Label" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 49.0
offset_right = 232.0
offset_bottom = 231.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons&Label"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Game_Name" type="Label" parent="Buttons&Label/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_q57cy")
theme_override_font_sizes/font_size = 25
text = "Game Name
(sonra değiştir)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="Buttons&Label/VBoxContainer"]
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_hg1ii")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_nswc5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmhud")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7qpcv")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhj80")
text = "Start"

[node name="Settings" type="Button" parent="Buttons&Label/VBoxContainer"]
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_hg1ii")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_nswc5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmhud")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7qpcv")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhj80")
text = "Settings"

[node name="Quit" type="Button" parent="Buttons&Label/VBoxContainer"]
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_hg1ii")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_nswc5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmhud")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7qpcv")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhj80")
text = "Quit"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="value_changed" from="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Music_container/Music" to="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Music_container/Music" method="_on_value_changed"]
[connection signal="value_changed" from="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Sfx_container/Sfx" to="SettingsMenu/Tabs/sounds/MarginContainer/VBoxContainer/Sfx_container/Sfx" method="_on_value_changed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Buttons&Label/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons&Label/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons&Label/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
